# cmake_to_zig_example

./: CMakeLists.txt  README.md  main.c  main.cpp
zig/: CMakeLists.txt  build.zig
zig/src/: root.zig
